welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:12: error: not found: value tCouleurBrosse
  tCouleurBrosse(Color.green)
  ^